@@ -20,6 +20,10 @@ PHP                                                                        NEWS
     (Nikita)
   . Fixed bug #52355 (Negating zero does not produce negative zero). (Andrea)
 
+. CURL:
+  . Fixed bug #71144 (Sementation fault when using cURL with ZTS).
+    (Michael Maroszek, Laruence)
+
 - DBA:
   . Fixed key leak with invalid resource. (Laruence)
 
